--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,19 @@
     "nyholm/psr7": "^1.1",
     "slim/http": "^0.7.0",
     "php": "^7.3",
-    "psr/http-client": "*",
+    "psr/http-client": "1.0.1",
     "psr/log": "^1.1",
     "slim/slim": "4.0.0-beta",
     "symfony/console": "^4.3",
     "php-di/php-di": "^6.0",
     "php-http/guzzle6-adapter": "^2.0",
-    "noglitchyo/dealdoh": "^0.3.0"
+    "noglitchyo/dealdoh": "^0.4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.1",
     "mockery/mockery": "^1.2",
     "monolog/monolog": "^1.24",
-    "squizlabs/php_codesniffer": "*",
+    "squizlabs/php_codesniffer": "3.5",
     "phpstan/phpstan": "^0.11.8"
   },
   "autoload": {
